@@ -3,13 +3,18 @@ package com.affymetrix.genometryImpl.symloader;
 import com.affymetrix.genometryImpl.AnnotatedSeqGroup;
 import com.affymetrix.genometryImpl.BioSeq;
 import com.affymetrix.genometryImpl.SeqSpan;
+import static com.affymetrix.genometryImpl.symloader.UriProtocolConstants.FILE_PROTOCOL;
+import static com.affymetrix.genometryImpl.symloader.UriProtocolConstants.FTP_PROTOCOL;
+import static com.affymetrix.genometryImpl.symloader.UriProtocolConstants.HTTP_PROTOCOL;
 import com.affymetrix.genometryImpl.symmetry.SeqSymmetry;
 import com.affymetrix.genometryImpl.util.BlockCompressedStreamPosition;
 import com.affymetrix.genometryImpl.util.ErrorHandler;
-import com.affymetrix.genometryImpl.util.SeekableFTPStream;
 import com.affymetrix.genometryImpl.util.GeneralUtils;
 import com.affymetrix.genometryImpl.util.LoadUtils.LoadStrategy;
 import com.affymetrix.genometryImpl.util.LocalUrlCacher;
+import com.affymetrix.genometryImpl.util.SeekableFTPStream;
+import com.google.common.io.Files;
+import com.google.common.io.Resources;
 
 import java.io.*;
 import java.lang.reflect.Field;
@@ -21,18 +26,18 @@ import java.util.NoSuchElementException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.regex.Pattern;
-
 import net.sf.picard.sam.BuildBamIndex;
 import net.sf.samtools.SAMException;
-import net.sf.samtools.SAMRecord;
 import net.sf.samtools.SAMFileHeader;
 import net.sf.samtools.SAMFileReader;
 import net.sf.samtools.SAMFileReader.ValidationStringency;
 import net.sf.samtools.SAMFileWriter;
 import net.sf.samtools.SAMFormatException;
+import net.sf.samtools.SAMRecord;
 import net.sf.samtools.seekablestream.SeekableBufferedStream;
 import net.sf.samtools.seekablestream.SeekableHTTPStream;
 import net.sf.samtools.util.CloseableIterator;
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * @author jnicol
@@ -56,16 +61,16 @@ public final class BAM extends XAM {
 
 	private SAMFileReader getSAMFileReader() throws Exception {
 		File indexFile = null;
-		SAMFileReader samFileReader;
+		SAMFileReader samFileReader = null;
 		String scheme = uri.getScheme().toLowerCase();
-		if (scheme.length() == 0 || scheme.equals("file")) {
+		if (StringUtils.equals(scheme, FILE_PROTOCOL.getValue())) {
 			// BAM is file.
 			//indexFile = new File(uri.)
 			File f = new File(uri);
 			indexFile = findIndexFile(f);
 			samFileReader = new SAMFileReader(f, indexFile, false);
 			samFileReader.setValidationStringency(ValidationStringency.SILENT);
-		} else if (scheme.startsWith("http")) {
+		} else if (StringUtils.equals(scheme, HTTP_PROTOCOL.getValue())) {
 			String reachable_url = LocalUrlCacher.getReachableUrl(uri.toASCIIString());
 				
 			if(reachable_url == null){
@@ -77,14 +82,17 @@ public final class BAM extends XAM {
 			// BAM is URL.  Get the indexed .bai file, and query only the needed portion of the BAM file.
 			String baiUriStr = findIndexFile(uri.toString());
 			// Guess at the location of the .bai URL as BAM URL + ".bai"	
-			if (baiUriStr == null) {
+			if (StringUtils.isBlank(baiUriStr)) {
 				ErrorHandler.errorPanel("No BAM index file",
 						"Could not find URL of BAM index at " + uri.toString() + ". Please be sure this is in the same directory as the BAM file.", Level.SEVERE);
 				this.isInitialized = false;
 				return null;
 			}
-			indexFile = LocalUrlCacher.convertURIToFile(URI.create(baiUriStr));
-			samFileReader = new SAMFileReader(new SeekableBufferedStream(new SeekableHTTPStream(new URL(reachable_url))), indexFile, false);
+
+			indexFile = File.createTempFile(baiUriStr, null);
+			Resources.asByteSource(URI.create(baiUriStr).toURL()).copyTo(Files.asByteSink(indexFile));
+			SeekableBufferedStream seekableStream = new SeekableBufferedStream(new SeekableHTTPStream(new URL(reachable_url)));
+			samFileReader = new SAMFileReader(seekableStream, indexFile, false);
 			samFileReader.setValidationStringency(ValidationStringency.SILENT);
 		} else if(scheme.startsWith("ftp")){
 			String baiUriStr = findIndexFile(uri.toString());
@@ -95,7 +103,8 @@ public final class BAM extends XAM {
 				this.isInitialized = false;
 				return null;
 			}
-			indexFile = LocalUrlCacher.convertURIToFile(URI.create(baiUriStr));
+			indexFile = File.createTempFile(baiUriStr, null);
+			Resources.asByteSource(URI.create(baiUriStr).toURL()).copyTo(Files.asByteSink(indexFile));
 			samFileReader = new SAMFileReader(new SeekableBufferedStream(new SeekableFTPStream(uri.toURL())), indexFile, false);
 			samFileReader.setValidationStringency(ValidationStringency.SILENT);
 		}else {
@@ -148,10 +157,10 @@ public final class BAM extends XAM {
 		Object compressedInputStreamValue = privateCompressedInputStreamField.get(mReaderValue);
 		Field privateBlockAddressField = compressedInputStreamValue.getClass().getDeclaredField("mBlockAddress");
 		privateBlockAddressField.setAccessible(true);
-                    long blockAddressValue = ((Long)privateBlockAddressField.get(compressedInputStreamValue)).longValue();
+                    long blockAddressValue = ((Long)privateBlockAddressField.get(compressedInputStreamValue));
 		Field privateCurrentOffsetField = compressedInputStreamValue.getClass().getDeclaredField("mCurrentOffset");
 		privateCurrentOffsetField.setAccessible(true);
-		int currentOffsetValue =  ((Integer)privateCurrentOffsetField.get(compressedInputStreamValue)).intValue();;
+		int currentOffsetValue =  ((Integer)privateCurrentOffsetField.get(compressedInputStreamValue));;
 		return new BlockCompressedStreamPosition(blockAddressValue, currentOffsetValue);
 	}
 
@@ -186,8 +195,8 @@ public final class BAM extends XAM {
 					}
 				}
 			}
-		} catch (Exception ex){
-			throw ex;
+		} catch (Throwable ex){
+			throw new Exception(ex);
 		} finally {
 			if (iter != null) {
 				iter.close();
@@ -355,10 +364,10 @@ public final class BAM extends XAM {
 
 	public static boolean hasIndex(URI uri) throws IOException{
 		String scheme = uri.getScheme().toLowerCase();
-		if (scheme.length() == 0 || scheme.equals("file")) {
+		if (StringUtils.equals(scheme, FILE_PROTOCOL)) {
 			File f = findIndexFile(new File(uri));
 			return f != null;
-		}else if(scheme.startsWith("http") || scheme.startsWith("ftp")) {
+		} else if (StringUtils.equals(scheme, HTTP_PROTOCOL) || StringUtils.equals(scheme, FTP_PROTOCOL)) {
 			String uriStr = findIndexFile(uri.toString());
 			return uriStr != null;
 		}
